<resources>
    <string name="app_name" translatable="false">LOGIN</string>
    <string name="nombre_usuario" translatable="false">Nombre de usuario</string>
    <string name="contraseña" translatable="false">Contraseña</string>

    <string name="tituloLista" translatable="false">LISTA</string>
    <string name="foto1" translatable="false"> algo de explicacion</string>

    <string name="nissan" translatable="false">El GT-R produce 570 CV (562 HP; 419 kW) y 65 kg·m (637 N·m; 470 lb·pie) a las cuatro ruedas.</string>
    <string name="supra" translatable="false">Desarrolla una potencia de 330 CV y un par motor de 440 Nm, según se indica en el propio vídeo.</string>
    <string name="mazda" translatable="false">Mecánicamente, el Mazda RX-7 contaba con un motor rotativo de 2 rotores y 1.3 litros que partía con una potencia de 255 caballos</string>

    <string name="Nombre" translatable="false">Nombre</string>
    <string name="Apellido" translatable="false">Apellido</string>
    <string name="Genero" translatable="false">Genero</string>
    <string name="Masc" translatable="false">Masculino</string>
    <string name="Fem" translatable="false">Femenino</string>
    <string name="Heli" translatable="false">Helicoptero</string>
    <string name="Pais" translatable="false">País</string>
    <string name="Opcion" translatable="false">Elige</string>
    <string name="Fecha" translatable="false">Fecha de nacimiento</string>
    <string name="Enviar" translatable="false">Enviar</string>
    <string name="Direccion" translatable="false">Direccion</string>
    <string name="Tel" translatable="false">Telefono</string>
    <string name="Tipo" translatable="false">Tipo</string>
    <string name="Opcion1" translatable="false">Domicili</string>
    <string name="Opcion2" translatable="false">Recollida a botiga</string>
    <string name="Registro" translatable="false">Registro</string>

    <string name="ID" translatable="false">Ingrese el ID a buscar</string>

    <string name="Aceptar" translatable="false">Aceptar</string>
    <string name="Eliminar" translatable="false">Eliminar</string>

    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">FORMULARIO</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
</resources>